[gd_scene load_steps=7 format=3 uid="uid://c85edkc7jav7y"]

[ext_resource type="Script" uid="uid://cbq8ttj78vcvo" path="res://src/weapons/chair.gd" id="1_2r6v6"]
[ext_resource type="Texture2D" uid="uid://d0hy0eiqausbc" path="res://assets/sprites/weapons/Chair.png" id="1_qi20v"]
[ext_resource type="Script" uid="uid://cvqd8y3pmxill" path="res://src/weapons/instant_damage.gd" id="3_sk78w"]
[ext_resource type="Script" uid="uid://4en1o7xygofw" path="res://src/weapons/damage_inflictor.gd" id="4_2k5hg"]
[ext_resource type="AudioStream" uid="uid://dsktr30hw162w" path="res://assets/sound/chair.wav" id="5_2k5hg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r6v6"]
size = Vector2(48, 53)

[node name="Chair" type="Node2D"]
script = ExtResource("1_2r6v6")
cooldown = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_qi20v")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_2r6v6")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="InstantDamage" type="Node" parent="." node_paths=PackedStringArray("my_area")]
script = ExtResource("3_sk78w")
my_area = NodePath("../Area2D")

[node name="Inflicter" type="Node" parent="." node_paths=PackedStringArray("play_sound")]
script = ExtResource("4_2k5hg")
damage = 40.0
structure_damage = 50.0
knockback_strength = 300.0
hitstun = 0.1
play_sound = NodePath("../Chair")

[node name="Chair" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2k5hg")
bus = &"Sound"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="hit_statue" from="InstantDamage" to="Inflicter" method="_on_statue_hit"]
